# locomo-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  clean.sh  deploy_model.py  docker-compose.yml  pyproject.toml
configs/: env.toml.example  mini-test.toml  smoke-test.toml  test-small.toml  test.toml.example
data/: locomo_small.json
locomo_test/: checks.py  cli.py  config.py  eval.py  judge.py  pipeline.py  stats.py
