[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "locomo-test-kit"
version = "0.1.0"
description = "Standardized LoCoMo benchmark test toolkit for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "websocket-client>=1.6",
    "openai>=1.0",
]

[project.scripts]
locomo-test = "locomo_test.cli:main"

[tool.setuptools.packages.find]
include = ["locomo_test*"]
