[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "locomo-test-kit"
version = "0.1.0"
description = "Standardized LoCoMo benchmark test toolkit for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "websocket-client>=1.6",
    "openai>=1.0",
    "sentence-transformers>=2.2",
    "flask>=3.0",
    "numpy>=1.24",
    "uvicorn[standard]"
]

[project.scripts]
locomo-test = "locomo_test.cli:main"

[tool.setuptools.packages.find]
include = ["locomo_test*"]
